--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -2044,6 +2044,11 @@ $\alpha_i(\Sigma)=0$.
 
 \subsection{Some algebraic constructions}
 
+\paragraph{The Weil algebra of a Lie algebra} $\lie{g}$ is the differential graded algebra $W(\lie{g})=\Wedge^\bullet\lie{g}^*\otimes S^\bullet\lie{g}^*$.
+Generators $T^a\in\lie{g}^*$ map to $A^a\in\Wedge^1\lie{g}^*$ of grading~$1$ and $F^a\in S^1\lie{g}^*$ of grading~$2$.
+The differential obeys $\dd{A^a}=F^a-\frac{1}{2}f^a{}_{bc}A^b\wedge A^c$ and $\dd{F^a}=-f^a{}_{bc}A^b\otimes F^c\in\Wedge^1\lie{g}^*\otimes S^1\lie{g}^*$
+where $f$ are structure constants of~$\lie{g}$.
+
 \paragraph{Reduction of a Lie (super)algebra}~$\lie{G}$.  If $\lie{G}=V_1\oplus V_2$ with $[V_1,V_2]\subseteq V_2$ then the bracket of~$\lie{G}$ restricted and projected to~$V_1$ defines a Lie (super)algebra.
 
 \paragraph{\(S\)-expansion of a Lie (super)algebra}~$\lie{G}$ by an abelian multiplicative semigroup~$S$: Lie (super)algebra $\lie{G}\times S$ with bracket $[(x,\alpha),(y,\beta)]=([x,y],\alpha\beta)$.  If $S=S_1\cup S_2$ with $S_1 S_2\subseteq S_2$ (in particular if there is a zero element $0_S=0_S\alpha=\alpha 0_S$) then by reduction we get a Lie (super)algebra structure on $\lie{G}\times S_1$.
