Reorganize some homotopy/homology

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1991,11 +1991,7 @@ Residual $\Lie{U}(1)$ gauge field $F_{\Lie{U}(1)} = \Tr(\hat{\phi} F) - 2\Tr(\ha
 % todo: vortices, monopoles, instantons (Abrikosov--Nielsen--Olesen
 % vortex, 't~Hooft--Polyakov monopole, \ldots{}).
 
-\subsection{Homology and cohomology}
-
-\paragraph[Complex projective space]{$H_k(\CC\PP^n,M)$}${}=M$ for $0\leq k\leq 2n$ even, else~$0$.
-
-\subsection{Homotopy groups \(\pi\sb n\)}
+\subsection{Homotopy, homology and cohomology}
 
 \paragraph{Basic properties.} $\pi_0(X,x)$ is the set of connected components.  $\pi_1(X,x)$ is the fundamental group.  For $k\geq 1$, $\pi_k(X,x)$ only depends on the connected component of~$x$.  $\pi_k(X\times Y,(x,y))=\pi_k(X,x)\times\pi_k(Y,y)$.
 
@@ -2020,6 +2016,8 @@ $\pi_1(\CC\PP^n)=0$, $\pi_2(\CC\PP^n)=\ZZ$, $\pi_k(\CC\PP^n)=\pi_k(S^{2n+1})$ fo
 \paragraph{Topological groups have abelian \(\pi\sb 1(G)\).}
 % http://mathoverflow.net/questions/35868/fundamental-group-of-lie-groups
 Proofs.  1.\@ The multiplication in~$G$ (point-wise) and concatenation of loops are two compatible group structures, hence (by Eckmann--Hilton theorem) coincide and are commutative.  2.\@ Explicitly, for $\alpha_1,\alpha_2\in\pi_1(G)$ loops, $(t_1,t_2)\mapsto\alpha_1(t_1)\alpha_2(t_2)\in G$ is a homotopy between $\alpha_1\star\alpha_2$ (concatenation) along bottom and right edges, $\alpha_1\cdot\alpha_2$ (point-wise multiplication) along the diagonal, and $\alpha_2\star\alpha_1$ along left and top edges.
+
+\paragraph[Complex projective space]{$H_k(\CC\PP^n,M)$}${}=M$ for $0\leq k\leq 2n$ even, else~$0$.
 
 \subsection{K\"ahler \(4\)-manifolds}
  % see 1206.1070 for detailed exposition
