Volume form as SL-structure

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1648,8 +1648,9 @@ $n=\dim_{\RR}X$) is a $G$-subbundle of the
 $\Lie{GL}(n,\RR)$-principal bundle $\Lie{GL}(TX)$ of tangent
 frames, namely a global section of $\Lie{GL}(TX)/G$.
 
-A manifold is oriented if it has a $\Lie{GL}_+(n,\RR)=\{\det>0\}$
-structure.  Similar definitions for Riemannian manifolds \etc:
+A $\Lie{GL}_+(n,\RR)=\{\det>0\}$ structure on~$X$ is equivalent to an orientation.
+A $\Lie{SL}(n,\RR)$ structure is equivalent to a volume form.
+Similar definitions for Riemannian manifolds \etc:
 \begin{tab}{@{ }l@{ \ }l@{\hspace{-2em}}r@{ }}
   $G$-structure \ & Manifold type & \quad \ Other characterization\tabfoot{1} \\
   \midrule
