Some dimensions of small representations

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -732,6 +732,15 @@ and $\lie{osp}(6,2|4)=\lie{osp}^*(8|4)$.
 % todo: representations of complex Lie algebras
 % todo: representations of real Lie algebras
 
+\paragraph{Complex dimensions of smalest irreps}
+\begin{tab}{ll}
+  $\Lie{E}_6$ & \href{https://oeis.org/A121737}{$1,27,27,78,351,351,351,351,650,1728,1728,\dots$} \\
+  $\Lie{E}_7$ & \href{https://oeis.org/A121736}{$1,56,133,912,1463,1539,6480,7371,8645,24320,\dots$} \\
+  $\Lie{E}_8$ & \href{https://oeis.org/A121735}{$1,248,3875,27000,30380,147250,779247,1763125,\dots\!$} \\
+  $\Lie{F}_4$ & \href{https://oeis.org/A121738}{$1,26,52,273,324,1053,1053,1274,2652,4096,\dots$} \\
+  $\Lie{G}_2$ & \href{https://oeis.org/A104599}{$1,7,14,27,64,77,77,182,189,273,286,378,448,\dots$} \\
+\end{tab}
+
 
 \section{Quantum field theory}
 
