--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1053,7 +1053,7 @@ $0 = \{Q_\alpha,Q_\beta\} =
 
 \paragraph{For \(16\) supercharges}, there is only the vector multiplet.
 
-\paragraph{For \(8\) supercharges}, vector multiplet and hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
+\paragraph{For \(8\) supercharges}, vector multiplet and (half-)hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
 % todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\thetacoordinate}F(\Phi)$
 
 \paragraph{For \(4\) supercharges}, vector ($V=V^\dagger$) and chiral ($\overline{D}_{\dot{\alpha}}X=0$) multiplets;
@@ -1120,6 +1120,7 @@ Lagrangian theories are characterized by~$G$ but non-Lagrangian theories are not
 \paragraph{6d \(\Nsusy=(1,0)\)} UV-complete Lagrangian gauge theories classified in \arxiv{1502.05405,1502.06594}.
 
 \paragraph{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
+\hepth{9608111}
 
 $\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavour symmetry enhancement.
 For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\thetaangle$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
