Do not show the various todo in the pdf

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1843,9 +1843,9 @@ A \href{http://en.wikipedia.org/wiki/Calabi-Yau_manifold}{Calabi--Yau
 K\"ahler metric has global holonomy group in $\Lie{SU}(m)$; the
 structure group can be reduced to $\Lie{SU}(m)$; or the holomorphic
 canonical bundle is trivial \ie, there exists a nowhere vanishing
-holomorphic top-form.  A weaker set of equivalent conditions
+holomorphic top-form.  % A weaker set of equivalent conditions
 
-\todo{here}
+% \todo{here}
 
 For simply connected manifolds, the conditions above are equivalent to
 the following (always equivalent) conditions on~$X$: some K\"ahler
@@ -1888,9 +1888,9 @@ with trivial holomorphic canonical bundle.
 
 % Compact hyperHermitian $4$-manifolds are conformal to tori, Hopf or K3. [ DOI: 10.2307/2046051 , Stable URL: http://www.jstor.org/stable/2046051 ]
 
-\paragraph{Spin structures} \todo{see\quad \url{http://mathoverflow.net/questions/220502/}}
+\paragraph{Spin structures} % \todo{see\quad \url{http://mathoverflow.net/questions/220502/}}
 
-\paragraph{Symmetric spaces} \todo{list missing}
+\paragraph{Symmetric spaces} % \todo{list missing}
 
 % todo: symmetric spaces? https://en.wikipedia.org/wiki/Symmetric_space
 
@@ -2039,7 +2039,8 @@ Proofs.  1.\@ The multiplication in~$G$ (point-wise) and concatenation of loops 
 
 \paragraph{K3~surfaces} are (the only besides~$T^4$) compact complex
 surfaces of trivial canonical bundle.  They have $h^{1,0}=0$ (in
-contrast to~$T^4$ which has \todo{value}).  Their first Chern class
+contrast to~$T^4$ % which has \todo{value}
+).  Their first Chern class
 $c_1\in H^2(X,\ZZ)$ thus vanishes.  By Yau's theorem there exists a
 Ricci flat metric, whose holonomy is then $\Lie{SU}(2)=\Lie{USp}(2)$ by
 Berger's classification.
@@ -2076,16 +2077,16 @@ there is no two-cycle~$\Sigma$ such that $\Sigma\cdot\Sigma=-2$ and all
 $\alpha_i(\Sigma)=0$.
 % todo: cite Kronheimer, The construction of ALE spaces as hyper-Kähler quotients
 
-\todo{Taub-NUT spaces, multi-Taub-NUT spaces,
-  Eguchi--Hanson spaces, Gibbons--Hawking multicenter spaces.  Write
-  metric.}  \todo{Non-explicitly: Atiyah--Hitchin space (moduli space of
-  two $\Lie{SU}(2)$ 't~Hooft-Polyakov monopoles in~4d).}
+% \todo{Taub-NUT spaces, multi-Taub-NUT spaces,
+%   Eguchi--Hanson spaces, Gibbons--Hawking multicenter spaces.  Write
+%   metric.}  \todo{Non-explicitly: Atiyah--Hitchin space (moduli space of
+%   two $\Lie{SU}(2)$ 't~Hooft-Polyakov monopoles in~4d).}
 
-\todo{The only compact CY$_2$ are $T^4$ and K3~surfaces.}
+% \todo{The only compact CY$_2$ are $T^4$ and K3~surfaces.}
 
-\todo{The only compact hypercomplex $4$-manifolds are $T^4$,
-  K3~surfaces, and the Hopf surface ($(\HH\setminus 0)/(q^\ZZ)$ for a
-  quaternion $\abs{q}>1$; it is diffeomorphic to $S^3\times S^1$).}
+% \todo{The only compact hypercomplex $4$-manifolds are $T^4$,
+%   K3~surfaces, and the Hopf surface ($(\HH\setminus 0)/(q^\ZZ)$ for a
+%   quaternion $\abs{q}>1$; it is diffeomorphic to $S^3\times S^1$).}
 
 % todo: what is the (co)homology of $X\times Y$?
 
