Tweak some comments

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -208,7 +208,7 @@
 \newcommand{\delbar}{\overline{\partial}}
 \newcommand{\Nsusy}{{\mathcal{N}}}
 \newcommand{\repr}[1]{\mathbb{#1}}
-\newcommand{\todo}[1]{\emph{todo: #1}}
+\newcommand{\TODO}[1]{\emph{TODO: #1}}
 \newcommand{\cyclic}[1]{\ZZ_{#1}}
 \newcommand{\ZZ}{\mathbb{Z}} % integers
 \newcommand{\QQ}{\mathbb{Q}} % rationals
@@ -496,13 +496,13 @@ of quivers of finite type,\ldots{}
 
 \subsection{Lie groups}
 
-% todo: say Lie subgroups can be horrible, such as irrational line in $T^2$
+% TODO: say Lie subgroups can be horrible, such as irrational line in $T^2$
 
-% todo: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
+% TODO: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
 
 \paragraph{Basics.}  The identity component~$G_0$ is a normal subgroup: $G/G_0$ is the group of components.  The maximal compact subgroup~$K$ is unique up to conjugation.
 
-% todo: is every compact connected Lie group reductive?
+% TODO: is every compact connected Lie group reductive?
 
 \paragraph[Compact connected Lie groups]{Every compact connected Lie group}~$K$
 is a quotient of $\Lie{U}(1)^n\times\prod_{i=1}^m K_i$ by a finite subgroup~$\Gamma$ of its center,
@@ -603,11 +603,11 @@ otherwise $\Gamma\subset\pi_1(\Lie{SO}(p)/\ZZ_2)\times\pi_1(\Lie{SO}(q)/\ZZ_2)$ 
 \end{tab}
 \qquad\llap{\rotatebox{90}{\mbox{}\rlap{\qquad\qquad\textbf{Discrete groups in this table should not be trusted.}}}}
 
-% todo: outer automorphism groups
+% TODO: outer automorphism groups
 
 % \paragraph{Classical Lie groups}
-% todo: give a construction of all real forms of classical Lie groups
-% todo: Check we used consistently the name "\Lie{USp}(2n)=\Lie{Sp}(n)" for the compact symplectic group of rank n.
+% TODO: give a construction of all real forms of classical Lie groups
+% TODO: Check we used consistently the name "\Lie{USp}(2n)=\Lie{Sp}(n)" for the compact symplectic group of rank n.
 
 \paragraph{Spin and Pin groups.}
 $\Lie{SO}(n)$ has a double cover $\Lie{Spin}(n)$.
@@ -621,11 +621,10 @@ The eight double covers of $\Lie{O}(p,q)$ differ in whether $R^2$, $T^2$ and $(R
 \paragraph{Accidental isomorphisms} (real reductive Lie groups)
 $\RR/\ZZ=\Lie{U}(1)$; $\Lie{SU}(2)=\Lie{Spin}(3)\twoheadrightarrow\Lie{SO}(3)$; \ldots{}
 
-% todo: complete list of isomorphisms, perhaps describe embeddings e.g. of SO(1,3)=SL(2,C) in Spin(4,C)=SL(2,C)xSL(2,C)?
+% TODO: complete list of isomorphisms, perhaps describe embeddings e.g. of SO(1,3)=SL(2,C) in Spin(4,C)=SL(2,C)xSL(2,C)?
 
 \paragraph{Homotopy.} Any connected Lie group is homeomorphic to its maximal compact subgroup~$K$ times a Euclidean space~$\RR^p$.
 All $\pi_{j\geq 1}(K)$ are abelian and finitely generated, $\pi_2(K)=0$, $\pi_3(K)=\ZZ^m$ where $m$~counts simple factors in a finite cover $\Lie{U}(1)^n\times\prod_{i=1}^m K_i\twoheadrightarrow K$, and $\pi_j(K)=\prod_{i=1}^m\pi_j(K_i)$ for $j\geq 2$.
-
 
 For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2d_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $d_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
 \begin{center}
@@ -656,7 +655,7 @@ Similarly, $\pi_{j<4n+2}(\Lie{USp}(2n))$ is $\ZZ$~for $j\equiv 3,7\bmod{8}$, $\Z
 % http://www.maths.ed.ac.uk/~aar/surgery/uicc/mimura.pdf claims the table is the "well-known Hopf theorem"
 % See Abanov's http://felix.physics.sunysb.edu/~abanov/Teaching/Spring2009/Notes/abanov-cpA1-upload.pdf
 
-% todo: say somewhere $\Lie{SU}(2)$ is homeomorphic to $S^3$.
+% TODO: say somewhere $\Lie{SU}(2)$ is homeomorphic to $S^3$.
 
 
 \subsection{Simple Lie superalgebras}
@@ -723,14 +722,14 @@ $\lie{su}(1,1|1)=\lie{sl}(2|1)=\lie{osp}(2|2)$
 and $\lie{su}(2|1)=\lie{osp}^*(2|2,0)$
 and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$
 and $\lie{osp}(6,2|4)=\lie{osp}^*(8|4)$.
-% todo: complete this list
+% TODO: complete this list
 
 \subsection{Lie supergroups}
 
 \subsection{Representations}
 
-% todo: representations of complex Lie algebras
-% todo: representations of real Lie algebras
+% TODO: representations of complex Lie algebras
+% TODO: representations of real Lie algebras
 
 \paragraph{Complex dimensions of smalest irreps}
 \begin{tab}{ll}
@@ -1028,7 +1027,7 @@ The 1d column gives the number of real supercharges.
                  & $(1,0)$ & $1$ & $2$ & $4$ & $(4,4)$ & $8$   \\
                  &         &     & $1$ & $2$ & $(2,2)$ & $4$   \\
 \end{tab}
-% todo: Euclidean case
+% TODO: Euclidean case
 
 \paragraph{Supersymmetry on symmetric curved spaces}
 4d $\Nsusy=2$ supersymmetry on~$S^4$ is $\lie{osp}(2|4)$.
@@ -1054,7 +1053,7 @@ $0 = \{Q_\alpha,Q_\beta\} =
 \paragraph{For \(16\) supercharges}, there is only the vector multiplet.
 
 \paragraph{For \(8\) supercharges}, vector multiplet and (half-)hypermultiplet; in 3d and lower also twisted vector multiplet and twisted hypermultiplet.
-% todo: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\thetacoordinate}F(\Phi)$
+% TODO: 4d N=2 chiral superfield $\Phi$ then $\int\dd{^4\thetacoordinate}F(\Phi)$
 
 \paragraph{For \(4\) supercharges}, vector ($V=V^\dagger$) and chiral ($\overline{D}_{\dot{\alpha}}X=0$) multiplets;
 in 3d $\Nsusy=2$ also linear multiplets ($\epsilon^{\alpha\beta} D_\alpha D_\beta\Sigma=0=\epsilon^{\alpha\beta}\overline{D}_\alpha\overline{D}_\beta\Sigma$);
@@ -1102,7 +1101,7 @@ contains both stress tensor and R-symmetry current and sources 16/16 supergravit
   2d  & $(8,8)$  & MW & $\Lie{Spin}(8)^2$ & ${}\supset\Lie{Spin}(8)$ \\
   1d  & $16$     & M  & $\Lie{Spin}(16)$ & ${}\supset\Lie{Spin}(9)$ \\
 \end{tab}
-% todo: discrete R-symmetries?
+% TODO: discrete R-symmetries?
 
 \paragraph{4d \(\Nsusy=4\)} has exactly marginal parameter $\tau=\thetaangle/(2\pi)+4\pi i/g^2$.
 Lagrangian theories are characterized by~$G$ but non-Lagrangian theories are not ruled out.
@@ -1134,7 +1133,7 @@ finitely many exceptions.
 
 There can be no continuous flavour symmetry enhancement.
 
-% todo: Hitchin system
+% TODO: Hitchin system
 
 The theory on $\RR^4_{\epsilon_1,0}$ (Nekrasov--Shatashvili limit) $\leftrightarrow$ quantum integrable system with Planck constant~$\epsilon_1$.
 
@@ -1148,7 +1147,7 @@ Lift to $\RR^4\times S^1$ gives $K$-theoretic Nekrasov partition function.  The 
 
 \paragraph{3d \(\Nsusy=4\)} has $\Lie{SU}(2)_C\times\Lie{SU}(2)_H$ R-symmetry acting on the Coulomb and Higgs branch.  Both branches are hyper-K\"ahler and the $\Lie{SU}(2)$ rotates their $\CC\PP^1$ worth of complex structures.  Denote $\Lie{T}\subset\Lie{G}$ the Cartan torus.  The Coulomb branch is a holomorphic Lagrangian fibration $\mathcal{M}_C\to\lie{T}_{\CC}/\Weyl$ with generic fiber $\Lie{T}_{\CC}^{\vee}\simeq(\CC^*)^{\rank\Lie{G}}$.  Its classical $\Hom(\pi_1(\Lie{G}),\Lie{U}(1))$ topological flavour symmetry can be enhanced quantum mechanically.
 
-% todo: What is the $\Lie{SU}(2)$ R-symmetry of mixed branches?
+% TODO: What is the $\Lie{SU}(2)$ R-symmetry of mixed branches?
 
 Example:
 $\smash{\mathtikz[inner sep=1pt]{
@@ -1369,9 +1368,9 @@ Has AdS/CFT dual with linear dilaton background.
 
 \paragraph{Sine-Gordon model} in 2d: $\mathcal{L}=\frac{1}{2}\del_\mu\phi\del^\mu\phi+m^2(\cos\phi-1)$ has eom $\square\phi+m^2\sin\phi=0$.
 
-% todo: classical Toda chain
+% TODO: classical Toda chain
 
-% todo: quantum Toda chain
+% TODO: quantum Toda chain
 
 \paragraph{Relativistic quantum Toda chain.} $H = \sum_{n=1}^N \bigl(\cos(2\eta\hat{p}_n)+g^2\cos(\eta\hat{p}_n+\eta\hat{p}_{n+1})\rme^{x_{n+1}-x_n}\bigr)$.  Its non-relativistic limit is $\eta\to 0$ imaginary with $g/(i\eta\sqrt{2})=c$ fixed.
 % \arxiv{1609.07385} ``Exact solution of the relativistic quantum Toda chain''
@@ -1622,7 +1621,7 @@ In this table ``type~IIA'' \etc{} refer to string theories not supergravities
   M-theory on $\Lie{G}_2$-manifolds\footnote{Apply K3 duality fiber-wise.} & heterotic or type~I on CY$_3$\\
   M-theory on K3\footnote{Apparently there is also a similar F-theory/heterotic duality.} & type~IIA on $T^3/\cyclic{2}$\\
 \end{tab}
-% todo: footnotes are lost!
+% TODO: footnotes are lost!
 
 \section{Manifolds}
 
@@ -1821,14 +1820,14 @@ $\Lie{SO}(n)$
   $\Lie{Spin}(7)$ & $\Lie{Spin}(7)$ manifold & $8$ \\
   $\Lie{G}_2$ & $\Lie{G}_2$ manifold & $7$ \\
 \end{tab}
-% todo: more at https://en.wikipedia.org/wiki/Holonomy
-% todo: perhaps http://projecteuclid.org/euclid.jdg/1090351387 interesting?
+% TODO: more at https://en.wikipedia.org/wiki/Holonomy
+% TODO: perhaps http://projecteuclid.org/euclid.jdg/1090351387 interesting?
 %
 Note that hyperK\"ahler $\implies$ Calabi--Yau $\implies$ K\"ahler since
 $\Lie{USp}(m)\subset\Lie{SU}(m)\subset\Lie{U}(m)$.
 In contrast, quaternionic-K\"ahler manifolds are not K\"ahler.
 
-% todo:
+% TODO:
 % A $\Lie{G}_2$-manifold is a $7$-dimensional manifold with a
 % $1$-integrable $\Lie{G}_2\to\Lie{GL}(7)$ structure namely the
 % corresponding definite 3-form $\omega$ should be covariantly constant
@@ -1845,7 +1844,7 @@ structure group can be reduced to $\Lie{SU}(m)$; or the holomorphic
 canonical bundle is trivial \ie, there exists a nowhere vanishing
 holomorphic top-form.  % A weaker set of equivalent conditions
 
-% \todo{here}
+% \TODO{here}
 
 For simply connected manifolds, the conditions above are equivalent to
 the following (always equivalent) conditions on~$X$: some K\"ahler
@@ -1856,29 +1855,29 @@ finite cover with trivial holomorphic canonical bundle; $X$~has a finite
 cover equal to the product of a torus and a simply connected manifold
 with trivial holomorphic canonical bundle.
 
-% todo: every Kähler manifold is spin (or at least spinc)
+% TODO: every Kähler manifold is spin (or at least spinc)
 
-% todo: every hyperKähler manifold is Ricci-flat
+% TODO: every hyperKähler manifold is Ricci-flat
 
-% todo: every hyperKähler manifold is Calabi--Yau
+% TODO: every hyperKähler manifold is Calabi--Yau
 
-% todo: ``Calabi proved a partial converse which says that a compact holomorphically symplectic Kähler manifold admits a unique hyperKähler metric with respect to any of its Kähler forms.'' (Mathworld)
+% TODO: ``Calabi proved a partial converse which says that a compact holomorphically symplectic Kähler manifold admits a unique hyperKähler metric with respect to any of its Kähler forms.'' (Mathworld)
 
-% todo: more on http://mathworld.wolfram.com/Hyper-KaehlerManifold.html
+% TODO: more on http://mathworld.wolfram.com/Hyper-KaehlerManifold.html
 
-% todo: more on Laplacians on Kähler manifolds at Wikipedia
+% TODO: more on Laplacians on Kähler manifolds at Wikipedia
 
-% todo: HyperK\"ahler manifolds admit holomorphic symplectic forms (i.e. non-degenerate closed holomorphic $2$-form) $\omega_2+\I\omega_3$
+% TODO: HyperK\"ahler manifolds admit holomorphic symplectic forms (i.e. non-degenerate closed holomorphic $2$-form) $\omega_2+\I\omega_3$
 
-% todo: Kodaira's classification of complex surfaces
+% TODO: Kodaira's classification of complex surfaces
 
-% todo: complex submanifold of a Kähler manifold is Kähler, in particular projective algebraic varieties and Stein manifolds
+% TODO: complex submanifold of a Kähler manifold is Kähler, in particular projective algebraic varieties and Stein manifolds
 
-% todo: Einstein manifold R=λg (but is λ constant?)
+% TODO: Einstein manifold R=λg (but is λ constant?)
 
-% todo: Kähler--Einstein manifold
+% TODO: Kähler--Einstein manifold
 
-% todo: self-dual Einstein manifolds
+% TODO: self-dual Einstein manifolds
 
 % Every quaternionic-K\"ahler manifold is locally almost hypercomplex
 
@@ -1888,11 +1887,11 @@ with trivial holomorphic canonical bundle.
 
 % Compact hyperHermitian $4$-manifolds are conformal to tori, Hopf or K3. [ DOI: 10.2307/2046051 , Stable URL: http://www.jstor.org/stable/2046051 ]
 
-\paragraph{Spin structures} % \todo{see\quad \url{http://mathoverflow.net/questions/220502/}}
+\paragraph{Spin structures} % \TODO{see\quad \url{http://mathoverflow.net/questions/220502/}}
 
-\paragraph{Symmetric spaces} % \todo{list missing}
+\paragraph{Symmetric spaces} % \TODO{list missing}
 
-% todo: symmetric spaces? https://en.wikipedia.org/wiki/Symmetric_space
+% TODO: symmetric spaces? https://en.wikipedia.org/wiki/Symmetric_space
 
 \paragraph{K3 surfaces} are the only CY$_2$: they have holonomy
 $\Lie{SU}(2)$.
@@ -1906,14 +1905,14 @@ K\"ahler form whose metric is Ricci flat.
 
 % \subsection{Misc properties of manifolds}
 
-% todo \paragraph{Rokhlin's theorem}
+% TODO \paragraph{Rokhlin's theorem}
 
 
 \section{Misc}
 
 \subsection{Special functions}
 
-% todo: Euler's Gamma function, elliptic Gamma function, hyperbolic Gamma function, Barnes' double-Gamma function, multiple sine, Upsilon, Jacobi theta functions,
+% TODO: Euler's Gamma function, elliptic Gamma function, hyperbolic Gamma function, Barnes' double-Gamma function, multiple sine, Upsilon, Jacobi theta functions,
 
 \paragraph{Multiple gamma function.}  For $a_i\in\CC$ with $\Re a_i>0$,
 $\Gamma_N(x|\vec{a})=\prod_{\vec{n}}^{\text{reg.}}(x+\vec{n}\cdot\vec{a})^{-1}=\exp(\partial_s\sum_{\vec{n}}(x+\vec{n}\cdot\vec{a})^{-s}|_{s=0})$,
@@ -2003,7 +2002,7 @@ is a smooth codimension~$3$ topological soliton where the gauge group~$G$ is spo
 Example: $\Lie{SU}(2)$ gauge theory with adjoint scalar~$\phi$ of potential $(a^2-\Tr\phi^2)^2$.
 Residual $\Lie{U}(1)$ gauge field $F_{\Lie{U}(1)} = \Tr(\hat{\phi} F) - 2\Tr(\hat{\phi} D\hat{\phi} D\hat{\phi})$ with $\hat{\phi}=\phi/\sqrt{\Tr\phi^2}$ obeys $\mathrm{d}F_{\Lie{U}(1)}=\Tr(\mathrm{d}\hat{\phi})^3$, whose integral is the monopole charge.
 
-% todo: vortices, monopoles, instantons (Abrikosov--Nielsen--Olesen
+% TODO: vortices, monopoles, instantons (Abrikosov--Nielsen--Olesen
 % vortex, 't~Hooft--Polyakov monopole, \ldots{}).
 
 \subsection{Homotopy, homology and cohomology}
@@ -2039,19 +2038,19 @@ Proofs.  1.\@ The multiplication in~$G$ (point-wise) and concatenation of loops 
 
 \paragraph{K3~surfaces} are (the only besides~$T^4$) compact complex
 surfaces of trivial canonical bundle.  They have $h^{1,0}=0$ (in
-contrast to~$T^4$ % which has \todo{value}
+contrast to~$T^4$ % which has \TODO{value}
 ).  Their first Chern class
 $c_1\in H^2(X,\ZZ)$ thus vanishes.  By Yau's theorem there exists a
 Ricci flat metric, whose holonomy is then $\Lie{SU}(2)=\Lie{USp}(2)$ by
 Berger's classification.
-% todo: which Sp?
+% TODO: which Sp?
 K3~surfaces are thus Calabi--Yau (CY$_2$) and hyperK\"ahler (hK$_4$).
 Their moduli space is connected and they are all diffeomorphic.
 
 \paragraph{Examples of K3~surfaces.} Quartic hypersurface in~$\PP^4$.
 Kummer surface namely resolution of $T^4/\cyclic{2}$.
 
-% todo: maybe move closer to Yau's theorem in "Types of manifolds"?
+% TODO: maybe move closer to Yau's theorem in "Types of manifolds"?
 \paragraph{Non-simply connected} Ricci-flat K\"ahler manifolds may fail
 to be CY$_n$ when the restricted holonomy group is $\Lie{SU}(n)$ but the
 global holonomy group is disconnected.  For example an Enriques surface
@@ -2075,22 +2074,22 @@ $\Gamma\subset\Lie{SU}(2)$.  The metric is fixed (up to isometry) by
 cohomology classes $\alpha_1,\alpha_2,\alpha_3\in H^2(X,\RR)$ such that
 there is no two-cycle~$\Sigma$ such that $\Sigma\cdot\Sigma=-2$ and all
 $\alpha_i(\Sigma)=0$.
-% todo: cite Kronheimer, The construction of ALE spaces as hyper-Kähler quotients
+% TODO: cite Kronheimer, The construction of ALE spaces as hyper-Kähler quotients
 
-% \todo{Taub-NUT spaces, multi-Taub-NUT spaces,
+% \TODO{Taub-NUT spaces, multi-Taub-NUT spaces,
 %   Eguchi--Hanson spaces, Gibbons--Hawking multicenter spaces.  Write
-%   metric.}  \todo{Non-explicitly: Atiyah--Hitchin space (moduli space of
+%   metric.}  \TODO{Non-explicitly: Atiyah--Hitchin space (moduli space of
 %   two $\Lie{SU}(2)$ 't~Hooft-Polyakov monopoles in~4d).}
 
-% \todo{The only compact CY$_2$ are $T^4$ and K3~surfaces.}
+% \TODO{The only compact CY$_2$ are $T^4$ and K3~surfaces.}
 
-% \todo{The only compact hypercomplex $4$-manifolds are $T^4$,
+% \TODO{The only compact hypercomplex $4$-manifolds are $T^4$,
 %   K3~surfaces, and the Hopf surface ($(\HH\setminus 0)/(q^\ZZ)$ for a
 %   quaternion $\abs{q}>1$; it is diffeomorphic to $S^3\times S^1$).}
 
-% todo: what is the (co)homology of $X\times Y$?
+% TODO: what is the (co)homology of $X\times Y$?
 
-% todo: In\"on\"u--Wigner contraction (for Lie superalgebras too)
+% TODO: In\"on\"u--Wigner contraction (for Lie superalgebras too)
 
 \subsection{Some algebraic constructions}
 
