Make copying and pasting better behaved

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1,5 +1,7 @@
 \pdfoutput=1
 \documentclass[10pt,letterpaper]{article}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 %\usepackage{savetrees}
 \usepackage[margin=1.2cm]{geometry}
 \usepackage{xcolor}
